--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,14 @@ serde_json = "1.0.117"
 teloxide = { version = "0.12.2", features = ["full"] }
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 serde = { version = "1.0.203", features = ["derive"] }
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
+async-trait = "0.1.80"
+anyhow = "1.0.86"
+tonic = "0.11.0"
+prost = "0.12.6"
+prost-types = "0.12.6"
+tokio-stream = "0.1.15"
+
+
+[build-dependencies]
+tonic-build = "0.11.0"
