--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ prost = "0.12.6"
 prost-types = "0.12.6"
 tokio-stream = "0.1.15"
 url = "2.5.2"
+moka = { version = "0.12.7", features = ["future"] }
 
 
 [build-dependencies]
