--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ url = "2.5.2"
 moka = { version = "0.12.7", features = ["future"] }
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 futures-util = "0.3.30"
+once_cell = "1.19.0"
 
 
 [build-dependencies]
