--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ moka = { version = "0.12.7", features = ["future"] }
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 futures-util = "0.3.30"
 once_cell = "1.19.0"
+pyo3 = "0.22.1"
 
 
 [build-dependencies]
