--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 futures-util = "0.3.30"
 once_cell = "1.19.0"
 pyo3 = {  version = "0.22.1", features = ["auto-initialize"] }
+futures = "0.3.30"
+tracing = "0.1.40"
 
 
 [build-dependencies]
