feat(action): add github action

--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -1,6 +1,6 @@
 FROM rust:1.79-slim-buster as build
 
-RUN apt-get update && apt-get install -y pkg-config libssl-dev
+RUN apt-get update && apt-get install -y python3 python3-pip pkg-config libssl-dev
 RUN USER=root cargo new --bin watchman
 WORKDIR /watchman
 
@@ -16,6 +16,7 @@ RUN rm ./target/release/deps/watchman*
 RUN cargo build --release
 
 FROM rust:1.79-slim-buster
+RUN apt-get update && apt-get install -y python3 python3-pip pkg-config libssl-dev
 
 COPY --from=build /watchman/target/release/watchman .
 
