feat(action): add github action

--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -15,9 +15,8 @@ COPY ./src ./src
 RUN rm ./target/release/deps/watchman*
 RUN cargo build --release
 
-FROM rust:1.79-slim-buster
-RUN apt-get update && apt-get install -y python3 python3-pip pkg-config libssl-dev
-RUN pip install
+FROM python:3.11-slim as python-base
+RUN pip install pykrx finance-datareader ta-lib
 COPY --from=build /watchman/target/release/watchman .
 
 CMD ["./watchman"]
