feat(action): add github action

--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -17,6 +17,14 @@ RUN cargo build --release
 
 FROM python:3.11-slim as python-base
 RUN pip install pykrx finance-datareader ta-lib
+RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
+  tar -xvzf ta-lib-0.4.0-src.tar.gz && \
+  cd ta-lib/ && \
+  ./configure --build=aarch64-unknown-linux-gnu && \
+  make && \
+  make install
+
+RUN rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
 COPY --from=build /watchman/target/release/watchman .
 
 CMD ["./watchman"]
