feat(main): update main rs

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql://postgres:1q2w3e4r@192.168.0.58:55432/analyzer
+LSSEC_KEY=PSA0cTqjeDE2hoNUclL2tiHgOLLQwzdkX43e
+LSSEC_SECRET=H0jIqEYl6cqNGr7CyyfHfN2Ns1hPiRR7
+LSSEC_WEBSOCKET=wss://openapi.ls-sec.co.kr:29443
