--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ once_cell = "1.19.0"
 pyo3 = {  version = "0.22.1", features = ["auto-initialize"] }
 futures = "0.3.30"
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+tracing-log = "0.2.0"
+spider = "1.99.10"
 
 
 [build-dependencies]
