--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tracing-log = "0.2.0"
 spider = "1.99.10"
+polars = "0.41.3"
+polars-lazy = "0.41.3"
+polars-sql = "0.41.3"
+tokio-util = "0.7.11"
 
 
 [build-dependencies]
