--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-diesel = { version = "2.2.0", features = ["postgres", "r2d2","chrono"] }
+diesel = { version = "2.2.0", features = ["postgres", "r2d2","chrono","uuid"] }
 dotenvy = "0.15.7"
 log = "0.4.21"
 pretty_env_logger = "0.5.0"
@@ -19,7 +19,7 @@ anyhow = "1.0.86"
 tonic = "0.11.0"
 prost = "0.12.6"
 prost-types = "0.12.6"
-tokio-stream = "0.1.15"
+tokio-stream = { version = "0.1.15" , features = ["full"] }
 url = "2.5.2"
 moka = { version = "0.12.7", features = ["future"] }
 tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
@@ -35,6 +35,7 @@ polars = "0.41.3"
 polars-lazy = "0.41.3"
 polars-sql = "0.41.3"
 tokio-util = "0.7.11"
+uuid = "1.10.0"
 
 
 [build-dependencies]
