--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ polars = "0.41.3"
 polars-lazy = "0.41.3"
 polars-sql = "0.41.3"
 tokio-util = "0.7.11"
-uuid = "1.10.0"
+uuid = { version = "1.10.0", features = ["v4", "serde"] }
 diesel-async = { version = "0.5.0", features = ["postgres"] }
 
 
