--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ polars-lazy = "0.41.3"
 polars-sql = "0.41.3"
 tokio-util = "0.7.11"
 uuid = { version = "1.10.0", features = ["v4", "serde"] }
-diesel-async = { version = "0.5.0", features = ["postgres"] }
+diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
 
 
 [build-dependencies]
