--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ log = "0.4.21"
 pretty_env_logger = "0.5.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde_json = "1.0.117"
-teloxide = { version = "0.12.2", features = ["full"] }
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 serde = { version = "1.0.203", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["serde"] }
@@ -37,6 +36,7 @@ polars-sql = "0.41.3"
 tokio-util = "0.7.11"
 uuid = { version = "1.10.0", features = ["v4", "serde"] }
 diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
+sea-orm = { version = "1.0.0-rc.5", features = ["runtime-tokio-rustls", "sqlx-postgres","macros"] }
 
 
 [build-dependencies]
