--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ uuid = { version = "1.10.0", features = ["v4", "serde"] }
 diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
 byteorder = "1.5.0"
 bigdecimal = { version = "0.4.5", features = ["serde"] }
+mockall = "0.13.0"
 
 
 [build-dependencies]
